--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "'/spaceimages/images/largesize/PIA16239_hires.jpg'"
+       "'/spaceimages/images/largesize/PIA19039_hires.jpg'"
       ]
      },
      "execution_count": 13,
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA16239_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19039_hires.jpg'"
       ]
      },
      "execution_count": 14,
@@ -358,6 +358,109 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.html\n",
+    "hems_soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title = []\n",
+    "img_url = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kayla Yano\\anaconda3\\envs\\PythonData\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:528: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    }
+   ],
+   "source": [
+    "for link in range(4):\n",
+    "    \n",
+    "    browser.find_link_by_partial_text('Enhanced').click()\n",
+    "  \n",
+    "    html = browser.html\n",
+    "    hems_soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "    title.append(hems_soup.find('h2', class_='title').get_text())\n",
+    "\n",
+    "    img_url.append(hems_soup.find('a', href=True, text='Original')['href'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cerberus Hemisphere Enhanced',\n",
+       " 'Valles Marineris Hemisphere Enhanced',\n",
+       " 'Syrtis Major Hemisphere Enhanced',\n",
+       " 'Valles Marineris Hemisphere Enhanced']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif',\n",
+       " 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif',\n",
+       " 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif',\n",
+       " 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
