--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "'/spaceimages/images/largesize/PIA19039_hires.jpg'"
+       "'/spaceimages/images/largesize/PIA17175_hires.jpg'"
       ]
      },
      "execution_count": 13,
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19039_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17175_hires.jpg'"
       ]
      },
      "execution_count": 14,
@@ -465,6 +465,57 @@
    "outputs": [],
    "source": [
     "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    mars_hemi_zip = zip(title, img_url)\n",
+    "    hemisphere_image_urls = []\n",
+    "\n",
+    "    # Iterate through the zipped object\n",
+    "    for title, img in mars_hemi_zip:\n",
+    "        \n",
+    "        mars_hemi_dict = {}\n",
+    "        \n",
+    "        # Add hemisphere title to dictionary\n",
+    "        mars_hemi_dict['title'] = title\n",
+    "        \n",
+    "        # Add image url to dictionary\n",
+    "        mars_hemi_dict['img_url'] = img\n",
+    "        \n",
+    "        # Append the list with dictionaries\n",
+    "        hemisphere_image_urls.append(mars_hemi_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls"
    ]
   },
   {
